Legg til jdk.management for å enable GC notifications og forhindre warn fra micrometer i logger